Added basic element files

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,5 @@
-@import './reset.scss';
-@import '../assets/fonts/fonts.scss';
+@import '@scss/reset.scss';
+@import '@assets/fonts/fonts.scss';
 
 html, body {
   font-family: 'Nunito';
