fonts have been replaced with the correct fonts. Header complete

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
-$color-accent-main: #feb358;
-$color-accent-light: #ff9a1e;
+$color-accent-main: #ff9a1e;
+$color-accent-light: #feb358;
 $color-accent-dark: #ff8d02;
 
 $color-text-main: #2d2e2d;
