--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import '../assets/fonts/fonts.scss';
 
 @mixin title {
   font-family: 'Nunito';
@@ -30,6 +31,14 @@
   font-weight: 400;
   line-height: 22px;
   color: $color-text-main;
+
+  &:hover {
+    color: $color-accent-light;
+  }
+
+  &:active {
+    color: $color-accent-dark;
+  }
 }
 
 @mixin category {
