--- a/src/components/Modal/Layout/styles.module.scss
+++ b/src/components/Modal/Layout/styles.module.scss
@@ -22,7 +22,7 @@
   right: 0;
   bottom: 0;
 
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.65);
 }
 
 .body {
@@ -30,19 +30,24 @@
   width: 400px;
   height: 100vh;
   background: $color-background-main;
-
-  &_small {
-    width: 400px;
-  }
 }
 
 .close {
   position: absolute;
-  right: 15px;
+  left: -50px;
+  top: 50%;
   transition: transform 0.3s ease;
   cursor: pointer;
 
+  width: 40px;
+  height: 40px;
+
   &:hover {
-    transform: rotate(45deg);
+    transform: rotate(90deg);
+  }
+
+  svg {
+    width: 100%;
+    height: 100%;
   }
 }
