--- a/src/components/Modal/Layout/styles.module.scss
+++ b/src/components/Modal/Layout/styles.module.scss
@@ -1,7 +1,7 @@
 @import '@styles/variables.scss';
 @import '@styles/typography.scss';
 
-.modal {
+.drawer {
   position: fixed;
   top: 0;
   left: 0;
@@ -15,6 +15,21 @@
   justify-content: end;
 }
 
+.center {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  box-sizing: border-box;
+  z-index: 1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .overlay {
   position: absolute;
   top: 0;
@@ -25,10 +40,16 @@
   background-color: rgba(0, 0, 0, 0.65);
 }
 
-.body {
+.drawer_body {
   position: relative;
   width: 400px;
   height: 100vh;
+  background: $color-background-main;
+}
+
+.center_body {
+  position: relative;
+  border-radius: 20px;
   background: $color-background-main;
 }
 
@@ -36,6 +57,26 @@
   position: absolute;
   left: -50px;
   top: 50%;
+  transition: transform 0.3s ease;
+  cursor: pointer;
+
+  width: 40px;
+  height: 40px;
+
+  &:hover {
+    transform: rotate(90deg);
+  }
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.close_center {
+  position: absolute;
+  right: -50px;
+  top: 0;
   transition: transform 0.3s ease;
   cursor: pointer;
 
