--- a/src/components/ModalProduct/styles.module.scss
+++ b/src/components/ModalProduct/styles.module.scss
@@ -6,18 +6,6 @@
   grid-template-columns: 400px 400px;
 }
 
-.photo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 50px;
-
-  img {
-    width: 300px;
-    height: 300px;
-  }
-}
-
 .product {
   display: flex;
   flex-direction: column;
@@ -35,14 +23,17 @@
   @include productName;
 
   margin-bottom: 10px;
-}
 
-.size {
-  @include productDescription;
-  margin-bottom: 10px;
+  &:first-letter {
+    text-transform: capitalize;
+  }
 }
 
 .composition {
   @include productDescription;
   margin-bottom: 10px;
+
+  &:first-letter {
+    text-transform: capitalize;
+  }
 }
