Created CartSlice. Adding, removing, changing the number of items in the cart

--- a/src/components/ShoppingCart/components/CartContent/CartItem/Counter/styles.module.scss
+++ b/src/components/ShoppingCart/components/CartContent/CartItem/Counter/styles.module.scss
@@ -21,6 +21,11 @@
       transform: scale(0.9);
       background: $color-accent-dark;
     }
+
+    &:disabled {
+      background: $color-background-dark;
+      cursor: default;
+    }
   }
 }
 
