--- a/src/components/ModalProduct/SizeSwitch/styles.module.scss
+++ b/src/components/ModalProduct/SizeSwitch/styles.module.scss
@@ -2,21 +2,46 @@
 @import '@styles/variables';
 
 .switch {
-  display: flex;
-  justify-content: space-between;
+  width: 100%;
+  height: 30px;
 
+  margin: auto;
   border-radius: 20px;
-  background: #ebebeb;
+  background: $color-background-dark;
 
-  span {
+  position: relative;
+  z-index: 7;
+
+  li {
+    float: left;
+    height: 100%;
     cursor: pointer;
-    color: #afafaf;
-    padding: 5px;
-    border-radius: 20px;
-    border-width: 1px;
+
+    span {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      width: 100%;
+      height: 100%;
+
+      font-size: 12px;
+      color: #afafaf;
+
+      position: relative;
+      z-index: 9;
+    }
   }
 }
 
-.active {
-  border: 1px solid $color-accent-main;
+.slider {
+  left: 0;
+  top: 0;
+
+  border-radius: 20px;
+  background: $color-background-main;
+
+  transition: all 0.3s ease;
+  position: absolute;
+  z-index: 8;
 }
