--- a/src/pages/HomePage/components/Products/ProductDetail/ProductPhoto/styles.module.scss
+++ b/src/pages/HomePage/components/Products/ProductDetail/ProductPhoto/styles.module.scss
@@ -4,8 +4,43 @@
   justify-content: center;
   padding: 50px;
 
-  img {
+  width: 100%;
+  height: 400px;
+
+  position: relative;
+}
+
+.img {
+  width: 370px;
+
+  transition: all 0.3s ease;
+
+  &_small {
+    width: 230px;
+  }
+
+  &_medium {
     width: 300px;
-    height: 300px;
+  }
+}
+
+.border {
+  position: absolute;
+  top: -10px;
+  left: -10px;
+
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &_large {
+    width: 340px;
+  }
+
+  &_medium {
+    width: 270px;
   }
 }
