working on orderPage. Created ProgressBar, CurrentOrder info

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -64,3 +64,10 @@
   color: $color-text-light;
 }
 
+@mixin stepLabel {
+  font-family: 'Nunito';
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 120%;
+}
+
