--- a/src/pages/OrderPage/CurrentOrder/ItemOrder/styles.module.scss
+++ b/src/pages/OrderPage/CurrentOrder/ItemOrder/styles.module.scss
@@ -10,6 +10,7 @@
 
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 30px;
 
   margin-bottom: 15px;
@@ -21,8 +22,17 @@
   color: $color-text-light;
 }
 
+.title {
+  font-size: 17px;
+
+  &:first-letter {
+    text-transform: capitalize;
+  }
+}
+
 .info {
   display: flex;
   gap: 5px;
-}
 
+  font-size: 15px;
+}
